refactor: [BE] 코드 유효성 hardening